<resources>
    <string name="app_name">Homepage</string>
    <string name="login">Logout</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="sub_item_1">Sub Item 1</string>
    <string name="sub_item_2">Sub Item 2</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="logo">Logo</string>
    <string name="todo">TODO</string>
    <string name="map_of_ericsson_athlone">   Map of Ericsson Athlone</string>
    <string name="canteen_menu">Canteen Menu</string>
    <string name="layout">TODO</string>
    <string name="chat_function">Chat function</string>
    <string name="faq">FAQ</string>
    <string name="toilet">toilet</string>
    <string name="coffeeicon">coffeeicon</string>
    <string name="prayer">prayer</string>
    <string name="quiet">quiet</string>
    <string name="toilets">Toilets</string>
    <string name="break_rooms">Break Rooms</string>
    <string name="prayer_rooms">Prayer Rooms</string>
    <string name="quiet_rooms">Quiet Rooms</string>
    <string name="copy_print">Copy/ Print</string>
    <string name="stairs">Stairs</string>
    <string name="ground_floor">Ground Floor</string>
    <string name="first_floor">First Floor</string>
    <string name="home_page">Home Page</string>
    <string name="logout">Logout</string>
    <string name="about_company"><![CDATA[
        <p><b>We are a world leader</b> in the rapidly changing environment <br/>of communications technology – by providing <br/>hardware, software, and services to enable the full value of connectivity.</p><br/>

        <p><b>Founded:</b> 1876.<br/>
        <b>Parent company:</b> Telefonaktiebolaget LM Ericsson (publ).<br/>
        <b>Company registration number:</b> 556016-0680.<br/>
        <b>Global headquarters:</b> Stockholm, Sweden.<br/>
        <b>President and CEO:</b> Börje Ekholm.<br/>
        <b>Chairman of The Board:</b> Ronnie Leten.<br/>
        <b>Net sales, Q1 2023:</b> SEK 62.6 billion.<br/>
        <b>EBIT, Q1 2023:</b> SEK 3.0 billion.</p><br/>

        <p><b>Net sales full year 2022:</b> SEK 271.5 billion.<br/>
        <b>EBIT, Full year 2022:</b> SEK 27 billion.</p><br/>

        <p><b>Listed:</b> Nasdaq Stockholm and on NASDAQ in New York.</p><br/>

        <p><b>Number of employees worldwide:</b><br/></p>
            <i>South East Asia, Oceania and India:</i> 27,981.<br/>
            <i>North East Asia:</i> 13,136.<br/>
            <i>North America:</i> 11,765.<br/>
            <i>Europe and Latin America:</i> 47,500*.<br/>
            <i>Middle East and Africa:</i> 4,549.<br/>

        <p><b>Total:</b> 104,931.<br/></p>

        <p>* of which Sweden: 14,384.<br/>
        (numbers from the latest interim report Q1 2023).</p><br/>

        <p><b>Gender breakdown (Dec 31, 2022):</b><br/></p>
            Female 26%<br/>
            Male 74%.
    ]]></string>
    <string name="menu">Menu</string>
    <string name="toolbar_chat">             Chat</string>
    <string name="logout_text">Logout</string>
    <string name="start_up">Start Up!</string>
    <string name="ericsson_for_beginners">Ericsson For Beginners</string>
    <string name="chat_text">Chat</string>
    <string name="message_your_colleagues">message your colleagues</string>
    <string name="open_chat">open chat</string>
    <string name="menu_text">Menu</string>
    <string name="message_your_colleagues_text">message your colleagues</string>
    <string name="open_menu">open menu</string>
    <string name="map_text">Map</string>
    <string name="message_your_colleagues1">message your colleagues</string>
    <string name="open_map">open map</string>
    <string name="faq_text">FAQ</string>
    <string name="message_your_colleagues3">message your colleagues</string>
    <string name="open_faq">open faq</string>
    <string name="about">We are a world leader in the rapidly changing environment of communications technology – by providing hardware, software, and services to enable the full value of connectivity. Founded: 1876. Global headquarters: Stockholm, Sweden. President and CEO: Börje Ekholm. Chairman of The Board: Ronnie Leten. Net sales, Q1 2023: SEK 62.6 billion. EBIT, Q1 2023: SEK 3.0 billion. Listed: Nasdaq Stockholm and on NASDAQ in New York. Number of employees worldwide. South East Asia, Oceania and India: 27,981. North East Asia: 13,136. North America: 11,765. Europe and Latin America: 47,500*. Middle East and Africa: 4,549. Total 104,931. * of which Sweden: 14,384. (numbers from the latest interim report Q1 2023). Gender breakdown (Dec 31, 2022): Female 26% Male 74%.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me</string>
</resources>