<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".map">

    <include
        android:id="@+id/toolbar_map"
        layout="@layout/toolbar_map" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="400dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/main_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019">

    </ImageView>

    <ImageButton
        android:id="@+id/toiletbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:contentDescription="@string/toilet"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708"
        app:srcCompat="@drawable/bathroom_symbols" />

    <ImageButton
        android:id="@+id/coffeebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:contentDescription="@string/coffeeicon"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"
        app:srcCompat="@drawable/coffee_symbol" />

    <ImageButton
        android:id="@+id/printbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:contentDescription="@string/prayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        app:srcCompat="@drawable/print_symbol" />

    <ImageButton
        android:id="@+id/quietbtn"
        android:layout_width="54dp"
        android:layout_height="70dp"
        android:background="@color/light_blue"
        android:contentDescription="@string/quiet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        app:srcCompat="@drawable/quiet_symbol" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toilets"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="109dp"
        android:layout_height="76dp"
        android:text="@string/break_rooms"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="93dp"
        android:text="@string/copy_print"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="115dp"
        android:layout_height="94dp"
        android:text="@string/quiet_rooms"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/stairsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963"
        app:srcCompat="@drawable/stairs" />

    <TextView
        android:id="@+id/textview7"
        android:layout_width="109dp"
        android:layout_height="76dp"
        android:text="@string/stairs"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/firstFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/first_floor"
        android:textColor="@color/white"
        android:textColorHighlight="#03A9F4"
        android:textColorLink="#2196F3"
        app:iconTint="#00B0FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978"
        app:strokeColor="#03A9F4" />

</androidx.constraintlayout.widget.ConstraintLayout>