<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="289dp"
            android:layout_height="153dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ericssonpic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185" />

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginTop="-300dp"
            android:background="#6ACAD6"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.457"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/faq_text"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginTop="-217dp"
            android:background="#6ACAD6"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.342"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/map_text"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginTop="-140dp"
            android:background="#6ACAD6"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.231"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/menu_text"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:background="#6ACAD6"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/chat_text"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:background="#3F51B5"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="11dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/start_up"
                android:textColor="#F4E9E9"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ericsson_for_beginners"
                android:textColor="#EAD9D9"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0A53CF"
            tools:ignore="VisualLintBottomNav"
            tools:layout_editor_absoluteY="651dp">

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#0A53CE"
                android:text="@string/logout_text" />

        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="279dp"
            android:layout_height="349dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="268dp"
            android:text="@string/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintLongText"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>